--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=Adafruit Fingerprint Sensor Library
-version=2.1.0
+name=Adafruit-Fingerprint-Sensor-Library
+version=1.0.0
 author=Adafruit
 maintainer=Adafruit <info@adafruit.com>
 sentence=Arduino library for interfacing to the fingerprint sensor in the Adafruit shop
 paragraph=Arduino library for interfacing to the fingerprint sensor in the Adafruit shop
 category=Sensors
-url=https://github.com/adafruit/Adafruit-Fingerprint-Sensor-Library
+url=https://github.com/martinlong1978/Adafruit-Fingerprint-Sensor-Library
 architectures=*
